--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SAMID</string>
+    <string name="home">Home</string>
+    <string name="activities">Activities</string>
+    <string name="consultarP">Consultar pacientes</string>
 </resources>
