--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">Home</string>
     <string name="activities">Activities</string>
     <string name="consultarP">Consultar pacientes</string>
+    <string name="weekly_analysis">Weekly Analysis</string>
 </resources>
