--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="braceletimage">braceletimage</string>
     <string name="baterry_svg">baterry_svg</string>
     <string name="have_you_experience_any_issues_with_this_device">Have you experience any issues with this device?</string>
+    <string name="patient_succesfully_added">Patient successfully added!</string>
+    <string name="ok">OK</string>
+    <string name="tick_svg">tick_svg</string>
 </resources>
