--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SAMID</string>
-    <string name="home">Home</string>
+    <string name="Home">Home</string>
     <string name="activities">Activities</string>
     <string name="consultarP">Consultar pacientes</string>
     <string name="weekly_analysis">Weekly Analysis</string>
@@ -15,4 +15,18 @@
     <string name="patient_succesfully_added">Patient successfully added!</string>
     <string name="ok">OK</string>
     <string name="tick_svg">tick_svg</string>
+    <string name="hello_samuel">Hello, Samuel</string>
+    <string name="imagen">imagen</string>
+    <string name="devices">Devices</string>
+    <string name="graph_ic">graph_ic</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="weekly_analisys">Weekly Analisys</string>
+    <string name="check_now">Check now</string>
+    <string name="history">History</string>
+    <string name="device_status">Device Status</string>
+    <string name="configuration">Configuration</string>
+    <string name="pulsera_image">Pulsera Image</string>
+    <string name="username">Username</string>
+    <string name="caretaker">Caretaker</string>
 </resources>
