agrege una pantalla de carga y la pantalla de check_now.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,8 @@
     <string name="register">Register</string>
     <string name="i_have_already_an_account">I have already an account</string>
     <string name="user_s_weekly_stats">User´s weekly stats</string>
+    <string name="cargando_datos">Cargando datos...</string>
+    <string name="paciente">Paciente</string>
+    <string name="manuel">Manuel</string>
     Layout_Header
 </resources>
